--- a/src/main/webapp/index.jspx
+++ b/src/main/webapp/index.jspx
@@ -8,7 +8,7 @@
 <jsp:output doctype-root-element="html"
       doctype-public="-//W3C//DTD XHTML 1.0 Strict//EN"
       doctype-system="http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd" />
-<mm:cloud rank="basic user">
+<mm:cloud>
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="nl">
 <head>
