--- a/src/main/webapp/index.jspx
+++ b/src/main/webapp/index.jspx
@@ -13,19 +13,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="nl">
 <head>
   <title>tacticalmediafiles.net</title>
-
-  <link href="${mm:link('/favicon.ico')}" rel="shortcut icon"  />
+  <link href="${mm:link('favicon.ico')}" rel="icon" type="image/x-icon" />
+  <link href="${mm:link('favicon.ico')}" rel="shortcut icon" type="image/x-icon" />
 <style type="text/css">
-body
-{
-	font-size: small;
-	font-family: sans-serif;
-}
+body { font-family: sans-serif; }
 </style>
 </head>
 <body>
 <div id="content">
-  tacticalmediafiles.net 
+  <h1>tacticalmediafiles.net</h1>
+  <a href="${mm:link('/mmbase/')}">MMBase</a>
 </div>
 </body>
 </html>
