--- a/src/main/webapp/article.jspx
+++ b/src/main/webapp/article.jspx
@@ -153,7 +153,7 @@
     <div class="clearBoth"><!-- empty --></div>
     
   </div><!-- EOF .ArticleContainer -->
-</div>
+</div><!-- EOF .GlobalContainer -->
 
 </body>
 </html>
