--- a/src/main/webapp/about.jspx
+++ b/src/main/webapp/about.jspx
@@ -36,7 +36,6 @@
               <div class="ArticleLinksLabel"><img src="${mm:link('/style/images/labels/share.gif')}" alt="Share" /></div>
               <br /> 
               <h5>share</h5>
-
               <br /><br /><br />
               <div class="ArticleLeftLine"><!-- empty --></div>
               <div class="ArticleLinksLabel"><img src="${mm:link('/style/images/labels/links.gif')}" alt="Links" /></div>
@@ -49,20 +48,31 @@
               <br /><br /><br /> 
           </div>
 
-          <div class="ArticleLinksContainer">
-              <div class="ArticleLeftLine"><!-- empty --></div>
-              <div class="ArticleLinksLabel"><img src="${mm:link('/style/images/labels/images.gif')}" alt="Images" /></div>
-          </div>
+          <tmf:article-relations />
+          
+          <!-- posrel,picture -->
+          <mm:relatednodescontainer path="posrel,picture">
+            <div class="ArticleLinksContainer">
+                <div class="ArticleLeftLine"><!-- empty --></div>
+                <div class="ArticleLinksLabel"><img src="${mm:link('/style/images/labels/images.gif')}" alt="Images" /></div>
+            </div>
 
-          <div class="ArticleImageContainer">
-              <div class="ArticleImageLabel">
-                  <p class="filelabel">leakslogo_square.jpg</p>
-                  <br /> 
-                  <a title="Leaks" href="http://www.tacticalmediafiles.net/picture.jsp?objectnumber=48386" target="_new"><img src="./artikel2_files/wikilogo_square.jpg" /></a>
-                  <br /><br /> 
-              </div>
-          </div>
-          <div class="ArticleImage"><img src="${mm:link('/style/images/x.gif')}" alt="X" /></div>
+            <mm:sortorder field="posrel.pos" />
+            <mm:relatednodes>		
+
+                  <div class="ArticleImageContainer">
+                    <div class="ArticleImageLabel">
+                      <p class="filelabel"><mm:field name="title" /></p>
+                      <mm:image mode="img" template="s(414)" />
+                      <!-- <a title="Leaks" href="http://www.tacticalmediafiles.net/picture.jsp?objectnumber=48386" target="_new"><img src="./artikel2_files/wikilogo_square.jpg" /></a> -->
+                    </div>
+                  </div>
+
+            </mm:relatednodes>
+            <div class="ArticleImage"><img src="${mm:link('/style/images/x.gif')}" alt="X" /></div>
+          </mm:relatednodescontainer>
+          <!-- EOF posrel,picture -->
+
           <!-- End of Left Stuff -->
           
         
@@ -71,6 +81,12 @@
                 <mm:field name="body" escape="none" />
               </p>
           </div><!-- EOF .Text -->
+
+          <div style="text-align: right; margin-top: 15px ;"><img src="${mm:link('/style/images/x-blue.gif')}" alt="X" /></div>
+          <div class="clearBoth"><!-- empty --></div>
+          <div class="clearBoth"><!-- empty --></div>
+          <div class="ArticleSpacer"><!-- empty --></div>
+        
         </div><!-- EOF .ArticleContent -->
 
       </mm:node>
