--- a/src/main/webapp/index.jspx
+++ b/src/main/webapp/index.jspx
@@ -23,6 +23,9 @@ body { font-family: sans-serif; }
 <div id="content">
   <h1>tacticalmediafiles.net</h1>
   <a href="${mm:link('/mmbase/')}">MMBase</a>
+  - <a href="list.jspx">list</a>
+  - <a href="about.jspx">about</a>
+  
 </div>
 </body>
 </html>
