--- a/src/main/webapp/style/css/tmf.css
+++ b/src/main/webapp/style/css/tmf.css
@@ -144,7 +144,7 @@ form.searchform
 input.SearchInputSmall
 {
 	border: 0px;
-	font-size: 11px;
+	/* font-size: 11px; */
 	margin: 0px;
 	padding: 0px;
 	height: 17px;
@@ -152,19 +152,19 @@ input.SearchInputSmall
 
 span.searchtexts
 {
-	font-size: 10px;
+	/* font-size: 10px; */
 	color: #AAAAAA;
 }
 
 select.searchfor
 {
-	font-size: 11px;
+	/* font-size: 11px; */
 	width: 75px;
 }
 
 select.searchsortby
 {
-	font-size: 11px;
+	/* font-size: 11px; */
 	width: 75px;
 }
 
@@ -224,6 +224,7 @@ h2.Title
 h5
 {
 	/* font-size: 10px; */
+	font-size: 0.95em;
 	color: #CCCCCC;
 	font-weight: normal;
 }
@@ -235,14 +236,14 @@ a
 	font-weight: normal;
 }
 
-a.small { font-size: 10px; }
-a.medium { font-size: 12px; }
+a.small { /* font-size: 10px; */ }
+a.medium { /* font-size: 12px; */ }
 
 span.filelabel, p.filelabel
 {
 	font-family: Courier;
 	color: #CCCCCC;
-	font-size: 10px;
+	/* font-size: 10px; */
 	margin-bottom: 5px;
 }
 
@@ -254,6 +255,7 @@ p.Summary
 	/* font-size: 14px ; */
 	font-style: italic;
 	/* line-height: 24px ; */
+	font-size: 1.2em;
 	line-height: 1.6em;
 	padding: 3px;
 	color: #3A3A3A;
@@ -332,7 +334,7 @@ ul.NavigationMenu li a.sel:hover { color: #616161; }
 input.SearchNav
 {
 	display: inline;
-	font-size: 11px;
+	/* font-size: 11px; */
 	font-weight: bold;
 	width: 70px;
 	border: 0px;
@@ -345,7 +347,7 @@ input.SearchNav
 input.SearchNav2
 {
 	display: inline;
-	font-size: 11px;
+	/* font-size: 11px; */
 	font-weight: bold;
 	width: 70px;
 	border: 0px;
@@ -443,6 +445,7 @@ div.ArticleLinksContainer
 	clear: left;
 	width: 270px;
 	padding-right: 10px;
+	font-size: 0.85em;
 }
 
 div.ArticleLinksMover
