--- a/src/main/webapp/about.jspx
+++ b/src/main/webapp/about.jspx
@@ -24,57 +24,59 @@
 
     <jsp:attribute name="body">
       <mm:node referid="page">
+        <div class="ArticleContainer">
 
-        <tmf:article-header title="${_node.title}"
-                            intro="${_node.intro}"
-                            label="about" />
+          <tmf:article-header title="${_node.title}"
+                              intro="${_node.intro}"
+                              label="about" />
 
-        <div class="ArticleContent">
+          <div class="ArticleContent">
         
 
-          <!-- All the stuff on the left of an article -->
+            <!-- All the stuff on the left of an article -->
 
-          <tmf:article-relations />
+            <tmf:article-relations />
           
-          <!-- posrel,picture -->
-          <mm:relatednodescontainer path="posrel,picture">
-            <div class="ArticleLinksContainer">
-                <div class="ArticleLeftLine"><!-- empty --></div>
-                <div class="ArticleLinksLabel"><img src="${mm:link('/style/images/labels/images.gif')}" alt="Images" /></div>
-            </div>
+            <!-- posrel,picture -->
+            <mm:relatednodescontainer path="posrel,picture">
+              <div class="ArticleLinksContainer">
+                  <div class="ArticleLeftLine"><!-- empty --></div>
+                  <div class="ArticleLinksLabel"><img src="${mm:link('/style/images/labels/images.gif')}" alt="Images" /></div>
+              </div>
 
-            <mm:sortorder field="posrel.pos" />
-            <mm:relatednodes>		
+              <mm:sortorder field="posrel.pos" />
+              <mm:relatednodes>		
 
-                  <div class="ArticleImageContainer">
-                    <div class="ArticleImageLabel">
-                      <p class="filelabel"><mm:field name="title" /></p>
-                      <mm:image mode="img" template="s(414)" />
-                      <!-- <a title="Leaks" href="http://www.tacticalmediafiles.net/picture.jsp?objectnumber=48386" target="_new"><img src="./artikel2_files/wikilogo_square.jpg" /></a> -->
+                    <div class="ArticleImageContainer">
+                      <div class="ArticleImageLabel">
+                        <p class="filelabel"><mm:field name="title" /></p>
+                        <mm:image mode="img" template="s(414)" />
+                        <!-- <a title="Leaks" href="http://www.tacticalmediafiles.net/picture.jsp?objectnumber=48386" target="_new"><img src="./artikel2_files/wikilogo_square.jpg" /></a> -->
+                      </div>
                     </div>
-                  </div>
 
-            </mm:relatednodes>
-            <div class="ArticleImage"><img src="${mm:link('/style/images/x.gif')}" alt="X" /></div>
-          </mm:relatednodescontainer>
-          <!-- EOF posrel,picture -->
+              </mm:relatednodes>
+              <div class="ArticleImage"><img src="${mm:link('/style/images/x.gif')}" alt="X" /></div>
+            </mm:relatednodescontainer>
+            <!-- EOF posrel,picture -->
 
-          <!-- End of Left Stuff -->
+            <!-- End of Left Stuff -->
           
         
-          <div style="padding-left: 280px ;">
-              <p class="Text">
-                <mm:field name="body" escape="none" />
-              </p>
-          </div><!-- EOF .Text -->
+            <div style="padding-left: 280px ;">
+                <p class="Text">
+                  <mm:field name="body" escape="none" />
+                </p>
+            </div><!-- EOF .Text -->
 
-          <div style="text-align: right; margin-top: 15px ;"><img src="${mm:link('/style/images/x-blue.gif')}" alt="X" /></div>
-          <div class="clearBoth"><!-- empty --></div>
-          <div class="clearBoth"><!-- empty --></div>
-          <div class="ArticleSpacer"><!-- empty --></div>
+            <div style="text-align: right; margin-top: 15px ;"><img src="${mm:link('/style/images/x-blue.gif')}" alt="X" /></div>
+            <div class="clearBoth"><!-- empty --></div>
+            <div class="clearBoth"><!-- empty --></div>
+            <div class="ArticleSpacer"><!-- empty --></div>
         
-        </div><!-- EOF .ArticleContent -->
+          </div><!-- EOF .ArticleContent -->
 
+        </div><!-- EOF .ArticleContainer -->
       </mm:node>
     </jsp:attribute>
   </tmf:html>
